// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TitleWrapper/> render() should render empty state cause no data is available 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="expandAll"
        title="Fold all"
      >
        <i
          class="material-icons"
        >
          unfold_less
        </i>
      </span>
      <span
        class="container"
      >
        <img
          alt="Yotpo"
          class="container"
          src="test-file-stub"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        Yotpo
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="expandAll"
      title="Fold all"
    >
      <i
        class="material-icons"
      >
        unfold_less
      </i>
    </span>
    <span
      class="container"
    >
      <img
        alt="Yotpo"
        class="container"
        src="test-file-stub"
        style="background-color: rgba(0, 0, 0, 0);"
      />
      Yotpo
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<TitleWrapper/> render() should render empty state cause no data is available 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="fieldContainer staticField"
      >
        <span
          class="fieldValue isNotBold"
        >
          No statistic data are available right now.
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldValue isNotBold"
      >
        No statistic data are available right now.
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<TitleWrapper/> render() should render icon, points and not tier because data is missing 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="expandAll"
        title="Fold all"
      >
        <i
          class="material-icons"
        >
          unfold_less
        </i>
      </span>
      <span
        class="container"
      >
        <img
          alt="Yotpo"
          class="container"
          src="test-file-stub"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        Yotpo
        <span
          class=" container primary"
        >
          <span
            class="material-icons icon"
          >
            stars
          </span>
          <span
            class="children"
          >
            1
          </span>
        </span>
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="expandAll"
      title="Fold all"
    >
      <i
        class="material-icons"
      >
        unfold_less
      </i>
    </span>
    <span
      class="container"
    >
      <img
        alt="Yotpo"
        class="container"
        src="test-file-stub"
        style="background-color: rgba(0, 0, 0, 0);"
      />
      Yotpo
      <span
        class=" container primary"
      >
        <span
          class="material-icons icon"
        >
          stars
        </span>
        <span
          class="children"
        >
          1
        </span>
      </span>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<TitleWrapper/> render() should render icon, points and tier because data is correct 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="expandAll"
        title="Fold all"
      >
        <i
          class="material-icons"
        >
          unfold_less
        </i>
      </span>
      <span
        class="container"
      >
        <img
          alt="Yotpo"
          class="container"
          src="test-file-stub"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        Yotpo
        <span
          class=" container primary"
        >
          <span
            class="material-icons icon"
          >
            stars
          </span>
          <span
            class="children"
          >
            1
          </span>
        </span>
        <span
          class="container"
        >
          <span
            class="material-icons stars"
          >
            star_rate
          </span>
          <span
            class="children"
          >
            Vip
          </span>
        </span>
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="expandAll"
      title="Fold all"
    >
      <i
        class="material-icons"
      >
        unfold_less
      </i>
    </span>
    <span
      class="container"
    >
      <img
        alt="Yotpo"
        class="container"
        src="test-file-stub"
        style="background-color: rgba(0, 0, 0, 0);"
      />
      Yotpo
      <span
        class=" container primary"
      >
        <span
          class="material-icons icon"
        >
          stars
        </span>
        <span
          class="children"
        >
          1
        </span>
      </span>
      <span
        class="container"
      >
        <span
          class="material-icons stars"
        >
          star_rate
        </span>
        <span
          class="children"
        >
          Vip
        </span>
      </span>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<TitleWrapper/> render() should render nothing cause data is available 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
